--- a/drivers/sensors/Makefile
+++ b/drivers/sensors/Makefile
@@ -1,8 +1,11 @@
 #
 # Makefile for the Sensor device drivers.
 #
+#
 # 2 27 2018, Christoph Hellwig <Ken>
 # Rewritten to use lists instead of if-statements.
 #
 
 obj-$(CONFIG_SENSORS_MPU6050)		+= mpu6050/mpu6050.o
+#obj-$(CONFIG_SENSORS_MPU6050)		+= mpu6050/inv_mpu_dmp_motion_driver.o
+#obj-$(CONFIG_SENSORS_MPU6050)		+= mpu6050/inv_mpu.o
