1.add encoder driver 2.add Qt Prj

--- a/drivers/sensors/Makefile
+++ b/drivers/sensors/Makefile
@@ -9,3 +9,4 @@
 obj-$(CONFIG_SENSORS_MPU6050)		+= mpu6050/mpu6050.o
 #obj-$(CONFIG_SENSORS_MPU6050)		+= mpu6050/inv_mpu_dmp_motion_driver.o
 #obj-$(CONFIG_SENSORS_MPU6050)		+= mpu6050/inv_mpu.o
+obj-$(CONFIG_SENSORS_ENCODER)		+= encoder/encode.o
