--- a/.config
+++ b/.config
@@ -1356,7 +1356,7 @@ CONFIG_KEYBOARD_ATKBD=y
 # CONFIG_KEYBOARD_QT1070 is not set
 # CONFIG_KEYBOARD_QT2160 is not set
 # CONFIG_KEYBOARD_LKKBD is not set
-CONFIG_KEYBOARD_GPIO=n
+# CONFIG_KEYBOARD_GPIO is not set
 # CONFIG_KEYBOARD_TCA6416 is not set
 # CONFIG_KEYBOARD_MATRIX is not set
 # CONFIG_KEYBOARD_MAX7359 is not set
@@ -1364,7 +1364,7 @@ CONFIG_KEYBOARD_GPIO=n
 # CONFIG_KEYBOARD_MPR121 is not set
 # CONFIG_KEYBOARD_NEWTON is not set
 # CONFIG_KEYBOARD_OPENCORES is not set
-CONFIG_KEYBOARD_SAMSUNG=n
+# CONFIG_KEYBOARD_SAMSUNG is not set
 # CONFIG_KEYBOARD_STOWAWAY is not set
 # CONFIG_KEYBOARD_SUNKBD is not set
 # CONFIG_KEYBOARD_XTKBD is not set
@@ -1433,7 +1433,7 @@ CONFIG_TOUCHSCREEN_TSC2007=y
 # CONFIG_TOUCHSCREEN_W90X900 is not set
 # CONFIG_TOUCHSCREEN_ST1232 is not set
 # CONFIG_TOUCHSCREEN_TPS6507X is not set
-CONFIG_TOUCHSCREEN_FT5X0X=n
+# CONFIG_TOUCHSCREEN_FT5X0X is not set
 CONFIG_INPUT_MISC=y
 # CONFIG_INPUT_AD714X is not set
 # CONFIG_INPUT_ATI_REMOTE is not set
@@ -1593,7 +1593,7 @@ CONFIG_SPI_S3C64XX=y
 #
 # CONFIG_SPI_SPIDEV is not set
 # CONFIG_SPI_TLE62X0 is not set
-CONFIG_SPI_RC522=n
+# CONFIG_SPI_RC522 is not set
 
 #
 # PPS support
@@ -1919,7 +1919,7 @@ CONFIG_SOC_CAMERA=y
 # CONFIG_SOC_CAMERA_MT9T112 is not set
 # CONFIG_SOC_CAMERA_MT9D115 is not set
 # CONFIG_VIDEO_SR200PC20 is not set
-CONFIG_VIDEO_OV5640=n
+# CONFIG_VIDEO_OV5640 is not set
 # CONFIG_VIDEO_S5K4ECGX is not set
 # CONFIG_SOC_CAMERA_MT9V022 is not set
 # CONFIG_SOC_CAMERA_RJ54N1 is not set
@@ -2595,7 +2595,8 @@ CONFIG_CLKDEV_LOOKUP=y
 # Sensors Support
 #
 CONFIG_SENSORS=y
-CONFIG_SENSORS_MPU6050=n
+# CONFIG_SENSORS_MPU6050 is not set
+CONFIG_SENSORS_ENCODER=y
 
 #
 # UNA-PLUS 3G Modem
