--- a/drivers/sensors/Kconfig
+++ b/drivers/sensors/Kconfig
@@ -15,6 +15,14 @@ config SENSORS_MPU6050
 	help
 	  Help yourself.........
 
+config SENSORS_ENCODER
+	tristate  "encode detect support"
+	default y
+	help
+	  Help yourself.........
+	  
 endif
+
+
 
 endmenu
