--- a/.config
+++ b/.config
@@ -2596,6 +2596,7 @@ CONFIG_CLKDEV_LOOKUP=y
 #
 CONFIG_SENSORS=y
 CONFIG_SENSORS_MPU6050=y
+CONFIG_SENSORS_MPU6050_DEV2=n
 CONFIG_SENSORS_ENCODER=n
 
 #
